# planning-agent

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  README.md  build.rs  clippy.toml  cqrs_implementation_gaps.md  install.sh  parallel_agents_finding.md  refactoring_plan.md  rustfmt.toml  unwrap_findings.md  workflow-claude-only.yaml  workflow-multi-reviewer.yaml  workflow.yaml  workflow.yaml.example
scripts/: pre-commit
skills/implementation/: SKILL.md
skills/implementation-review/: SKILL.md
skills/methodical-debugging/: SKILL.md
skills/plan-review/: SKILL.md
skills/plan-review-adversarial/: SKILL.md
skills/plan-review-codebase/: SKILL.md
skills/plan-review-operational/: SKILL.md
skills/planning/: SKILL.md
src/: change_fingerprint.rs  claude.rs  claude_usage.rs  claude_usage_tests.rs  cli_usage.rs  codex_usage.rs  config.rs  config_claude_mode_tests.rs  config_codex_mode_tests.rs  config_gemini_mode_tests.rs  config_inline_tests.rs  config_modes.rs  config_tests.rs  daemon_log.rs  diagnostics.rs  gemini_usage.rs  git_worktree.rs  host_protocol.rs  main.rs  planning_dir.rs  planning_paths.rs  planning_paths_tests.rs  prompt_format.rs  session_logger.rs  session_store.rs  session_store_migration.rs  session_store_tests.rs  session_tracking.rs  session_tracking_tests.rs  skills.rs  state.rs  state_tests.rs  structured_logger.rs  update.rs  usage_reset.rs  verification_state.rs  workflow_selection.rs
src/account_usage/: api_client.rs  credentials.rs  fetcher.rs  mod.rs  store.rs  types.rs
src/account_usage/tests/: api_client_tests.rs  credentials_tests.rs  fetcher_tests.rs  store_tests.rs  types_tests.rs
src/agents/: claude.rs  codex.rs  gemini.rs  log.rs  mod.rs  prompt.rs  protocol.rs  runner.rs
src/agents/claude/: agent.rs  mod.rs  parser.rs  util.rs
src/agents/codex/: agent.rs  mod.rs  parser.rs
src/agents/gemini/: agent.rs  mod.rs  parser.rs
src/agents/tests/: mod.rs  prompt_tests.rs  protocol_tests.rs  runner_tests.rs
src/app/: change_fingerprint.rs  cli.rs  cli_usage.rs  diagnostics.rs  failure.rs  headless.rs  implementation.rs  mod.rs  util.rs  util_tests.rs  verify.rs  workflow.rs  workflow_common.rs  workflow_decisions.rs  workflow_selection.rs
src/app/tests/: change_fingerprint_tests.rs  cli_usage_tests.rs  diagnostics_tests.rs  implementation_tests.rs  util_tests.rs  workflow_common_tests.rs  workflow_selection_tests.rs
src/app/tui_runner/: approval_input.rs  events.rs  implementation_input.rs  input.rs  input_naming.rs  mod.rs  mouse_input.rs  session_browser_input.rs  session_events.rs  slash_commands.rs  slash_commands_tests.rs  snapshot_helper.rs  workflow_browser_input.rs  workflow_lifecycle.rs  workflow_loading.rs
src/app/workflow/: completion.rs  mod.rs  (+3 more)
src/domain/: actor.rs  aggregate.rs  aggregate_tests.rs  commands.rs  errors.rs  events.rs  failure.rs  input.rs  mod.rs  query.rs  review.rs  services.rs  supervisor.rs  types.rs  view.rs
src/event_store/: file_store.rs  mod.rs
src/host/: host_protocol.rs  mod.rs  rpc_server.rs  server.rs  server_tests.rs  state.rs
src/mcp/: mod.rs  protocol.rs  review_schema.rs  server.rs  spawner.rs
src/phases/: fixing.rs  implementation.rs  implementation_review.rs  mod.rs  planning.rs  review_parser.rs  review_prompts.rs  review_schema.rs  reviewing.rs  reviewing_tests.rs  revising.rs  summary.rs  verdict.rs  verification.rs
src/rpc/: daemon_file_service.rs  daemon_service.rs  host_service.rs  mod.rs
src/session_daemon/: client.rs  client_tests.rs  file_service_impl.rs  mod.rs  protocol.rs  rpc_client.rs  rpc_integration_tests.rs  rpc_server.rs  rpc_subscription.rs  rpc_upstream.rs  server.rs  server_tests.rs  session_logger.rs  session_store.rs  session_tracking.rs  subscription.rs  subscription_tests.rs  upstream.rs
src/state_machine/: commands.rs  events.rs  mod.rs  snapshot.rs  tests.rs
src/tests/: git_worktree_tests.rs  planning_paths_tests.rs  prompt_format_tests.rs  skills_tests.rs  state_tests.rs  structured_logger_tests.rs  update_tests.rs  usage_reset_tests.rs
src/tui/: app.rs  cursor_utils.rs  embedded_terminal.rs  event.rs  file_index.rs  mention.rs  mod.rs  scroll_regions.rs  scroll_state.rs  session.rs  session_browser.rs  session_event_sender.rs  slash.rs  tabs.rs  terminal_spawn.rs  title.rs  ui.rs  workflow_browser.rs
(+134 files in other folders)
