[package]
name = "planning-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "planning"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
anyhow = "1"
chrono = "0.4"

# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
futures = "0.3"

# Utils
dirs = "6"
unicode-width = "0.2"
