[package]
name = "planning-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "planning"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
futures = "0.3"

# Utils
dirs = "6"
sha2 = "0.10"
unicode-width = "0.2"

# PTY for Claude usage (removes expect dependency)
portable-pty = "0.9"
which = "8"

# Unix-specific poll for PTY timeout handling
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["poll", "process", "signal"] }

# Multi-agent orchestration
serde_yaml = "0.9"
async-trait = "0.1"
regex = "1.12.2"

# MCP server
base64 = "0.22"

# Diagnostics bundle
zip = "2"

# Auto-update
ureq = "3"

# Cross-platform file locking for session daemon
fs2 = "0.4"

# Random token generation for Windows session daemon auth
rand = "0.8"

# Host mode GUI (optional - requires system GUI libraries)
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "persistence", "x11"], optional = true }
egui_extras = { version = "0.33", features = ["all_loaders"], optional = true }

# Desktop notifications (optional)
notify-rust = { version = "4", optional = true }

# Image loading for tray icon (optional)
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

# Container identification
gethostname = "0.5"

# System tray (macOS/Windows only - gtk3-rs on Linux is deprecated and doesn't compile with Rust 1.92+)
[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = { version = "0.21", optional = true }
muda = { version = "0.17", optional = true }

[features]
default = []
host-gui = ["eframe", "egui_extras", "notify-rust", "image"]
host-gui-tray = ["host-gui", "tray-icon", "muda"]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
string_slice = "deny"

[dev-dependencies]
tempfile = "3"
proptest = "1"
